--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,4 +23,4 @@ jobs:
             - "/usr/local/lib/python3.6/site-packages"
       - run:
           command: |
-            python -m pytest
+            pipenv run python -m pytest
