--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Pillow==5.4.1
 pytesseract==0.2.6
-pytest===4.3.1
-coverage===4.5.3
-pytest-cov===2.6.1
+pytest==4.3.1
+coverage==4.5.3
+pytest-cov==2.6.1
