--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "author": "Ben Adida <ben@adida.net>",
   "license": "GPLv3",
   "dependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/register": "^7.4.4",
     "@types/node": "^12.0.0",
+    "image-js": "^0.21.6",
     "jpeg-js": "^0.3.5",
     "jsqr": "^1.2.0",
     "ts-node": "^8.1.0",
@@ -15,6 +19,6 @@
   "scripts": {
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
-    "start": "ts-node ./src/scanner.ts"
+    "start": "ts-node ./src/index.ts"
   }
 }
